--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-        
+        <h1>assignment </h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet pariatur, sed praesentium sunt tenetur beatae id molestiae doloribus provident cum explicabo, dignissimos eum iusto eius sint. Reprehenderit mollitia voluptates delectus!</p>
 </body>
 </html>
